[package]
name = "resolver"
version = "0.1.0"
edition = "2021"
authors = ["Maximilien DI DIO <mdidio@pm.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6"

[dependencies.clap]
version = "3.2.5"
features = ["derive"]

[dependencies.trust-dns]
version = "0.16"
default-features = false
